Fix border on collapse component

--- a/less/components/rc-collapse.less
+++ b/less/components/rc-collapse.less
@@ -1,5 +1,5 @@
 .rc-collapse {
-  border: 1px solid #d9d9d9 0;
+  border-width: 0;
   font-weight: 300;
   color: #4d4f53;
 }
